5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4384/executions/1832_3183.log
== TEST (2019-06-13 18:12:21) 
-- CODE:
for numpy import*
vet=array(eval(input("digite o vetor: ")))
print(sort(vet))
-- ERROR:
File "XXXX", line 1
    for numpy import*
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:12:38) 
-- CODE:
from numpy import*
vet=array(eval(input("digite o vetor: ")))
print(sort(vet))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:12:50) 
-- CODE:
from numpy import*
vet=array(eval(input("digite o vetor: ")))
print(sort(vet))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 18:13:03) 
-- CODE:
from numpy import*
vet=array(eval(input("digite o vetor: ")))
print(sort(vet))
-- EXECUTION TIME:
0.834376
-- TEST CASE 1:
---- input:
[20,19,18,17,10,9,8,7]
---- correct output:
[ 7  8  9 10 17 18 19 20]
---- user output:
[ 7  8  9 10 17 18 19 20]
-- TEST CASE 2:
---- input:
[6,6,6,5,5,5,4,4,4,3,3,3]
---- correct output:
[3 3 3 4 4 4 5 5 5 6 6 6]
---- user output:
[3 3 3 4 4 4 5 5 5 6 6 6]
-- TEST CASE 3:
---- input:
[4,3,2,1,0,-1,-2,-3]
---- correct output:
[-3 -2 -1  0  1  2  3  4]
---- user output:
[-3 -2 -1  0  1  2  3  4]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
